banner icon_text service_slogan endpoints added

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,10 @@
         <li> api/&lt;str:lang&gt;/ projects/&lt;int:pk&gt;/
         <li> api/&lt;str:lang&gt;/ projects/&lt;int:project_id&gt;/imgs/
         <li> api/&lt;str:lang&gt;/ info/
+        <li> api/&lt;str:lang&gt;/ cover/
+        <li> api/&lt;str:lang&gt;/ banner/
+        <li> api/&lt;str:lang&gt;/ icon_text/
+        <li> api/&lt;str:lang&gt;/ service_slogan/
     </ol>
 </body>
 </html>
